--- a/app/src/main/res/layout/activity_upload.xml
+++ b/app/src/main/res/layout/activity_upload.xml
@@ -7,42 +7,40 @@
     tools:context=".UploadActivity">
 
     <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="220dp"
-        android:layout_height="218dp"
-        android:layout_marginTop="66dp"
-        android:layout_marginBottom="29dp"
+        android:id="@+id/uploadImageView"
+        android:layout_width="371dp"
+        android:layout_height="274dp"
+        android:layout_marginTop="16dp"
         android:onClick="imageViewClicked"
-        app:layout_constraintBottom_toTopOf="@+id/commentText"
+        android:visibility="visible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        tools:srcCompat="@drawable/select_image" />
 
     <EditText
         android:id="@+id/commentText"
         android:layout_width="379dp"
         android:layout_height="78dp"
-        android:layout_marginStart="17dp"
-        android:layout_marginEnd="17dp"
-        android:layout_marginBottom="70dp"
         android:ems="10"
         android:hint="Comment"
         android:inputType="textPersonName"
         app:layout_constraintBottom_toTopOf="@+id/uploadButton"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView" />
+        app:layout_constraintTop_toBottomOf="@+id/uploadImageView"
+        app:layout_constraintVertical_bias="0.834" />
 
     <Button
         android:id="@+id/uploadButton"
         android:layout_width="326dp"
         android:layout_height="47dp"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="24dp"
         android:onClick="uploadClicked"
         android:text="Upload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/commentText" />
+        app:layout_constraintHorizontal_bias="0.494"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
